--- a/index.html
+++ b/index.html
@@ -62,26 +62,23 @@
         <div class="aboutText">
           <h2>Sobre mí</h2>
           <p>
-            Soy un apasionado de la tecnología y el diseño. Mi interés en este
-            fascinante mundo comenzó con los videojuegos y la curiosidad por
-            comprender su funcionamiento interno.
+            Soy un apasionado de la tecnología y el diseño. Mi interés en este 
+            mundo comenzó con los videojuegos y la curiosidad por
+            comprender como funcionaban por dentro.
           </p>
           <p>
-            Esta inquietud me llevó a embarcarme en el desarrollo de mi propio
-            proyecto, un desafío que ha reforzado mi interés y habilidades en el
-            ámbito tecnológico.
+            Fue esta curiosidad la que me llevó a embarcarme en el desarrollo de mi propio
+            proyecto, un desafío que ha impulsado mi interés en el ámbito tecnológico.
           </p>
           <p>
-            Mi entusiasmo por la tecnología no se detuvo allí, ya que decidí
-            explorar otros campos. Actualmente, estoy finalizando mis estudios
+            Mi curiosidad no se detuvo aquí, ya que decidí
+            explorar otros campos. Actualmente, me encuentro finalizando mis estudios
             en Desarrollo de Aplicaciones Web, donde he adquirido conocimientos
-            en diversas áreas y desarrollado competencias clave que me motivan a
-            seguir aprendiendo y creciendo profesionalmente.
+            en diferentes tecnologías que me motivan a seguir aprendiendo.
           </p>
           <p>
-            Con esta formación, me siento preparado para integrarme en el mundo
-            laboral y continuar fortaleciendo mis habilidades para alcanzar un
-            desarrollo profesional sólido.
+            Gracias a este aprendizaje me siento preparado para lanzarme al mundo
+            laboral y continuar formandome profesionalmente.
           </p>
         </div>
         <div class="aboutContact">
