--- a/index.html
+++ b/index.html
@@ -120,11 +120,15 @@
       <h2>Proyectos</h2>
       <div class="projects">
         <div class="project">
-          <div class="projectImg"></div>
+          <a href="https://github.com/quimuDev/CoinChangeAPI" target="_blank">
+            <div class="projectImg"></div>
+          </a>
           <p>Coin Change</p>
         </div>
         <div class="project">
-          <div class="projectImg"></div>
+          <a href="https://github.com/quimuDev/Anselmo-s-Bakery" target="_blank">
+            <div class="projectImg"></div>
+          </a>
           <p>PLaydate</p>
         </div>
       </div>
